booky/css/common.css
/* ... */
a{
	text-decoration:none;color:inherit;
}
input,select,img{
    vertical-align:middle;
}

img{
    width: 100%;   
}

/* loading */
.loading{
    z-index:300;
    display: none;
	position:fixed;top:0px;left:0px;width:100%;height:100%;
	background-color: white;
	opacity: 0.8;
	text-align:center;
}
.loading>img{    
	max-width: 300px;
	position: fixed;
	transform: translate(-50%,-50%);
    left: 50%;
    top: 50%;}

/* menu */

.menu-shade{
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: -100%;
    background-color: rgba(0,0,0,0.5);;
    overflow: hidden;
    z-index: 5;
}

.menu{
    display: none;
    position: fixed;
    width: 350px;
    height: 100%;
    top: 0;
    left: -350px;
    background-color:rgba(255,255,255, 1);
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    flex-direction: column;
    align-items: center;
    -webkit-transition: left 0.5s; 
    transition: left 0.5s;
    overflow: scroll;
    z-index: 100;
    opacity: 0;
}

.close-menu{height: 30px;}

::-webkit-scrollbar { all: unset; width: 0;}

.menu img{
    fleX: none;
    align-self: flex-start;
    width: auto;
    height: 15px;
    margin: 35px 0 0 40px;
    cursor: pointer;
}

.menu div:nth-child(2){
    margin-top: 15px;
}

.menu div{
    width: 80%;
    padding: 35px 0 10px 2px;
    border-bottom: 1px solid #E1E0E1;    
    color: #544D30;
    font-family: "Cinzel", serif, "NSimSun";
    font-weight: 500;
    letter-spacing: 2px;
    font-size: 18px;
    cursor: pointer;
}

.menu div a:hover{
    color: #B9B144;  
}

/* header */

header{
    display: flex;
    justify-content: space-around;
    padding: 10px 60px 40px;
    margin: 10px 150px 0 150px; 
}

header .btn_menu{
    width: 40px;
    height: 40px;
    background: url("../img/menu.svg") center no-repeat transparent;
    background-size: 50%;
    position: absolute;
    left: 60px;
    top: 38px;
    transform: translateY(-38%);
    cursor: pointer;   
    border: 0;
    z-index: 10;
}

header .btn_logo{
    flex: none;    
    position: absolute;
    top: 25px;
    left: 50%;
    transform: translate(-50%);
}

header .btn_logo img{
    max-width: 120px;
    height: auto;
    cursor: pointer;
}

header .btn_search{
    width: 40px;
    height: 40px;
    background: url("../img/search.svg") center no-repeat transparent;
    background-size: 50%;
    position: absolute;
    right: 205px;
    top: 38px;
    transform: translateY(-38%);
    cursor: pointer;   
    border: 0;
    z-index: 10;
}

#addbook{
    width: 35px;
    height: 35px;
    background: url("../img/add_btn.svg") center no-repeat transparent;
    background-size: 50%;
    position: absolute;
    right: 135px;
    top: 38px;
    transform: translateY(-35%);
    cursor: pointer;   
    border: 0;
    z-index: 10;
}

#scanbook{
    width: 35px;
    height: 35px;
    background: url("../img/scan.png") center no-repeat transparent;
    background-size: 60%;
    position: absolute;
    right: 60px;
    top: 38px;
    transform: translateY(-35%);
    cursor: pointer;   
    border: 0;
    z-index: 10;
}

/* search */
.search-shade{
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    margin:0;
    background-color: white;
    overflow: auto;
    z-index: 100;
    display: flex;
    flex-direction: column;
    align-items: center;
    visibility:hidden;
    opacity:0;
    filter:alpha(opacity=0);
    -webkit-transition:300ms ease;
    -moz-transition:300ms ease;
    -o-transition:300ms ease;
    transition:300ms ease;
}

.searchbar-img{
  width: 100%;
  position: relative;
  margin-bottom: 200px;
}

.searchbar-img>img{
    width: 20px;
    height: 20px;
    position: absolute;
    top: 35px;
    right: 65px;
    cursor: pointer;   
}

.search-shade  form{
    width: 80%;
    position: relative;
}

.search-shade form input{
    width: 100%;
    border: 0;
    padding: 12px 0px 10px 25px;
    border-bottom: 1px solid #B9B144;
    font-family: "Noto Sans JP", sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 18px;
}

.search-shade form>button{
    width: 20px;
    height: 20px;
    background: url(../img/search.svg) no-repeat;
    background-size: 100%;
    border: 0;
    position: absolute;
    top: 30%;
    right: 2%;
    cursor: pointer;
}
.searchbar-list{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 80%;
    margin: 0 0 100px 0;
}
.searchbar-list h5{
    padding: 20px 0 10px 0;
    margin: 5% 0 0 0;
    font-size: 20px;
    font-family: "Martel Sans", sans-serif;
    font-weight: 400;
}
.searchbar-list ul{
    list-style: none;
    margin-top: 10px;
    display: flex;
    width:80%;
    flex-direction: column;
    /* align-items: flex-start; */
}

.searchbar-list li{
    font-family: "Cinzel", serif, "NSimSun";
    display: list-item;
    letter-spacing: 2px;
    margin: 20px 3px 0 3px;
    text-align: center;
    font-size: 1.25rem;
    font-weight: 600;
}

.searchbar-list li:after{
    content: "";
    font-weight: 100;
    padding: 0 5px;
    font-size: 1.75rem;
}

.search-ul a{
    text-decoration: none;
    position: relative;
    cursor: pointer;
    padding: 4px;
}

.search-ul a:after{
    content: '';
    width: 100%;
    position: absolute;
    bottom: 3px;
    left: 0;
    right: 0;
}

.search-ul a:hover:after{
    border-bottom: 1px solid #B9B144;
    cursor: pointer;
}

.noresult {
    width: 20%;
    height: 10%;
    text-align: center;
}

/* ADD BOOK */
.add-shade{
    position: fixed;
    width: 100%;
    height: 100%;
    overflow: auto;
    top: 0;
    left: 0;
    margin:0;
    background-color: white;
    z-index: 100;
    display: flex;
    flex-direction: column;
    align-items: center;
    visibility:hidden;
    opacity:0;
    filter:alpha(opacity=0);
    -webkit-transition:300ms ease;
    -moz-transition:300ms ease;
    -o-transition:300ms ease;
    transition:300ms ease;
}
/* ... */

